--- a/kap3.tex
+++ b/kap3.tex
@@ -1,4 +1,4 @@
-\documentclass[../MAIN/main.tex]{subfiles}
+\documentclass[main.tex]{subfiles}
 \begin{document}
 \chapter{Funktionsuntersuchung}\label{Funktionsuntersuchung}
 \chapterauthor{Bruno}
@@ -593,7 +593,7 @@ Hier ist die Kurvenschar der Funktion\\ $f(x)=ax^3$. Sie verlaufen alle durch da
 \end{minipage}
 \hfill
 \begin{minipage}[b]{0.4\linewidth}
-\includegraphics[height=12\baselineskip]{../kap3/BundelFunktionenscharen.eps}
+\includegraphics[height=12\baselineskip]{kap3/BundelFunktionenscharen.eps}
 \end{minipage}
 
 \subsection{Beispiel}
