--- a/kap5.tex
+++ b/kap5.tex
@@ -1,4 +1,4 @@
-\documentclass[../MAIN/main.tex]{subfiles}
+\documentclass[main.tex]{subfiles}
 \begin{document}
 \chapter{Vektorielle Geometrie}
 \chapterauthor{Pascal}
@@ -1661,5 +1661,5 @@
 
 
 \section{Sätze}
-\input{../kap5/saetze}
+\input{kap5/saetze}
 \end{document}
