--- a/kap8.tex
+++ b/kap8.tex
@@ -1,4 +1,4 @@
-\documentclass[../MAIN/main.tex]{subfiles}
+\documentclass[main.tex]{subfiles}
 \begin{document}
 \chapter{Zahlentheorie}
 \chapterauthor{Bruno}
