--- a/kap10.tex
+++ b/kap10.tex
@@ -1,4 +1,4 @@
-\documentclass[../MAIN/main.tex]{subfiles}
+\documentclass[main.tex]{subfiles}
 \begin{document}
 \chapter{Algorithmik}
 \chapterauthor{Rémy}
